--- a/club.html
+++ b/club.html
@@ -519,7 +519,7 @@
       </div>
 
       <!-- Sticky Join CTA -->
-      <a id="stickyCta" class="sticky-cta" href="#" target="_blank" rel="noopener" style="display:none;">Join The Club</a>
+      <a id="stickyCta" class="sticky-cta" href="#" target="_blank" rel="noopener" style="display:none;">Coming Soon</a>
     </div>
   </div>
 
