--- a/club.html
+++ b/club.html
@@ -360,7 +360,7 @@
             <i class="fas fa-star" style="margin-right:8px;"></i>Review
           </a>
           <a href="#" class="hero-cta secondary" id="shopButton" style="display:none;">
-            <i class="fas fa-shopping-bag" style="margin-right:8px;"></i>Shop
+            <i class="fas fa-shopping-bag" style="margin-right:8px;"></i>Donate
           </a>
         </div>
       </div>
